# project_cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  rustfmt.toml  test.sh
.github/workflows/: cd.yml  ci.yml  matrix.json
src/: args.rs  lib.rs  log.rs  main.rs  simple.rs
src/core/: color.rs  dir_rm.rs  dir_stats.rs  heuristic.rs  lang.rs  match_data.rs  matching_state.rs  mod.rs  scanner.rs  threading.rs
src/heuristics/: cargo_target.rs  cmake.rs  direnv.rs  flutter.rs  git.rs  gradle.rs  hidden.rs  js.rs  mod.rs  python.rs  rust.rs  system.rs  unity.rs  venv.rs
src/ui/: app.rs  event.rs  handler.rs  logo.txt  mod.rs  model.rs  popup.rs  render.rs  tui.rs
src/ui/render/: header.rs  help.rs  mod.rs  spinner.rs  table.rs
src/ui/render/popup/: del.rs  exit.rs  info.rs  mod.rs
src/walker/: matching_state.rs  mod.rs
tests/: walker.rs
