[package]
name = "project_cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Kacper0510 <wkacper@spoko.pl>", "jaanonim <mat8mro@gmail.com>"]
publish = false
rust-version = "1.80"  # LazyLock

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
ratatui = "0.28.0"
jwalk = "0.8.1"
throbber-widgets-tui = "0.7.0"
size = "0.4.1"
unicode-segmentation = "1.11.0"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"

