[package]
name = "project_cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Kacper0510 <wkacper@spoko.pl>", "jaanonim <mat8mro@gmail.com>"]
description = "Disk cleaning program which mainly targets output and cache directories of programming languages and build systems"
publish = false
rust-version = "1.80"  # LazyLock
resolver = "2"

[dependencies]
clap = { version = "4.5.16", features = ["derive"], optional = true }
ratatui = { version = "0.28.0", optional = true }
jwalk = "0.8.1"
throbber-widgets-tui = { version = "0.7.0", optional = true }
size = "0.5.0-preview2"
unicode-segmentation = { version = "1.11.0", optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
directories = { version = "5.0.1", optional = true }

[features]
cli = ["dep:clap", "dep:ratatui", "dep:throbber-widgets-tui", "dep:unicode-segmentation", "dep:tracing-error", "dep:tracing-subscriber", "dep:directories"]
default = ["cli"]

[[bin]]
name = "project_cleaner"
required-features = ["cli"]
